@@ -1,10 +1,0 @@
-from ftw.journal.testing import FTW_JORUNAL_INTEGRATION_TESTING
-import unittest2 as unittest
-
-
-class TestFtwJournalGeneral(unittest.TestCase):
-
-    layer = FTW_JORUNAL_INTEGRATION_TESTING
-
-    def test_dummy(self):
-        pass
